--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -13,7 +11,6 @@
 
 # misc
 .DS_Store
-.env.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -21,3 +18,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+target/
+.idea/
+*.log*
+node_modules/
+build/
+.scannerwork/
